--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <!-- Navbar -->
   <nav class="bg-white py-4 sticky top-0 z-50 shadow-sm">
     <div class="container mx-auto px-4 flex justify-between items-center">
-      <a href="#" class="text-xl md:text-2xl font-serif">Villa Magellano</a>
+      <a href="#" class="text-xl md:text-2xl font-serif">Nest Guesthouse</a>
       <!-- Hamburger Button -->
       <button id="menu-toggle" class="md:hidden focus:outline-none">
         <svg class="w-6 h-6 text-trulli-900" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -88,7 +88,7 @@
             Experience the authentic Garda Lake
           </h1>
           <p class="text-lg md:text-xl text-white text-opacity-90 mb-8">
-            Modern comfort meets traditional charm in our luxurious villa
+            Modern comfort meets traditional charm in our villa
           </p>
           <a href="booking.html" class="inline-block py-3 px-6 bg-white text-trulli-900 font-medium hover:bg-opacity-90 transition-colors">
             Book Your Stay
@@ -107,7 +107,7 @@
           Comfort, tranquility and nature
         </h2>
         <p class="text-base md:text-lg text-trulli-500 mb-8 leading-relaxed">
-          Nestled by Garda Lake, our restored villa offers a blend of authentic architecture and modern comfort for your Italian escape.
+          Located near Garda Lake, our villa offers a blend of traditional architecture and modern comfort for your Italian escape.
         </p>
         <a href="about.html" class="inline-flex items-center text-trulli-900 hover:text-trulli-500 transition-colors duration-250">
           <span class="mr-2 font-medium">Discover our story</span>
@@ -191,7 +191,7 @@
     <div class="container mx-auto px-4 py-10">
       <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
         <div>
-          <h3 class="text-xl md:text-2xl font-serif mb-4">Villa Magellano</h3>
+          <h3 class="text-xl md:text-2xl font-serif mb-4">Nest Guesthouse</h3>
           <p class="text-white/70 text-sm md:text-base mb-6">Experience the magic of Garda Lake in our luxurious villa.</p>
         </div>
         <div>
@@ -214,7 +214,7 @@
         </div>
       </div>
       <div class="border-t border-white/20 mt-8 pt-6 flex flex-col md:flex-row justify-between items-center">
-        <p class="text-white/70 text-sm">© 2025 Nest Guesthouse Magellano. All rights reserved.</p>
+        <p class="text-white/70 text-sm">© 2025 Nest Guesthouse. All rights reserved.</p>
       </div>
     </div>
   </footer>
