--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us - Villa Magellano</title>
+  <title>About Us - Nest Guesthouse</title>
   <meta name="description" content="Learn about our story and the authentic Puglia experience at Yours Trulli" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">
   <link rel="icon" href="static/logo.jpeg" type="image/png">
@@ -55,7 +55,7 @@
   <!-- Navbar -->
   <nav class="bg-white py-4 sticky top-0 z-50 shadow-sm">
     <div class="container mx-auto px-6 flex justify-between items-center">
-      <a href="index.html" class="text-2xl font-serif">Villa Magellano</a>
+      <a href="index.html" class="text-2xl font-serif">Nest Guesthouse</a>
       <div class="hidden md:flex space-x-8">
         <a href="index.html" class="text-trulli-900 hover:text-trulli-500">Home</a>
         <a href="about.html" class="text-trulli-900 hover:text-trulli-500 font-medium">About us</a>
@@ -79,7 +79,7 @@
           Our Story
         </span>
         <h1 class="text-4xl md:text-5xl font-serif mb-6 leading-tight">
-          About Villa Magellano 
+          About Nest Guesthouse Magellano 
         </h1>
         <p class="text-lg text-trulli-500 leading-relaxed">
           Discover the history, passion, and vision behind our authentic Garda Lake retreat. From ancient stones to modern comfort, learn how we're preserving tradition while creating unforgettable experiences.
