--- a/about.html
+++ b/about.html
@@ -82,8 +82,7 @@
           About Nest Guesthouse Magellano 
         </h1>
         <p class="text-lg text-trulli-500 leading-relaxed">
-          Discover the history, passion, and vision behind our authentic Garda Lake retreat. From ancient stones to modern comfort, learn how we're preserving tradition while creating unforgettable experiences.
-        </p>
+       Discover the history and passion behind our villa. From traditional house to modern comfort, learn how we have built a unique home retreat.    </p>
       </div>
     </div>
   </div>
@@ -95,18 +94,16 @@
         <div class="order-2 md:order-1">
           <h2 class="text-3xl md:text-4xl font-serif mb-6">Our Journey</h2>
           <p class="text-trulli-500 mb-6 leading-relaxed">
-            The story of Yours Trulli began in 2010 when Maria and Antonio Rossi, enchanted by the distinctive beauty of trulli architecture, purchased a cluster of abandoned trulli houses nestled in the countryside near Alberobello.
-          </p>
+            The story of Nest Guesthouse began in 2015, when Simonetta and Gianpietro discovered an empty house tucked away in the peaceful countryside near Lake Garda. Inspired by its quiet charm and natural beauty, they saw the potential to create something special—a warm and welcoming retreat for travelers from all over the world.
           <p class="text-trulli-500 mb-6 leading-relaxed">
-            Having grown up in Puglia, the couple had a deep connection to the region's cultural heritage. They envisioned bringing these historic structures back to life while preserving their authenticity and sharing the magic of trulli living with travelers from around the world.
-          </p>
+            Both having grown up in the southern part of Verona, Simonetta and Gianpietro felt a strong connection to the land and local traditions. They dreamed of combining their love for gardening with their passion for home renovation. Their goal was simple: to create a space that feels like home, filled with nature, comfort, and care, where every guest can truly relax and feel at ease.
+         </p>
           <p class="text-trulli-500 leading-relaxed">
-            After three years of careful restoration, working with local artisans who understood the traditional building techniques, Yours Trulli welcomed its first guests in 2013. Today, our property stands as a testament to the perfect harmony between historical preservation and contemporary comfort.
-          </p>
+          After three years of thoughtful restoration and working closely with local craftsmen, Nest Guesthouse opened its doors in 2018. Blending traditional charm with modern comfort, the villa is now a cozy, elegant getaway surrounded by a beautiful garden full of unique plants. It's a place built with heart—and ready to be shared with you.        </p>      </p>
         </div>
         <div class="order-1 md:order-2">
           <img 
-            src="https://images.unsplash.com/photo-1590059300073-c1ea20ae0a5a?q=80&w=2874&auto=format&fit=crop" 
+            src="static/IMG_3783.jpg" 
             alt="Traditional trulli houses" 
             class="rounded-lg shadow-xl w-full h-auto"
           />
@@ -121,7 +118,7 @@
       <div class="max-w-4xl mx-auto text-center mb-16">
         <h2 class="text-3xl md:text-4xl font-serif mb-6">Our Values</h2>
         <p class="text-trulli-500">
-          Every aspect of Yours Trulli is guided by our commitment to these core principles
+          Every aspect of Nest Guesthouse is guided by our commitment to these values
         </p>
       </div>
 
@@ -170,7 +167,7 @@
       <div class="max-w-4xl mx-auto text-center mb-16">
         <h2 class="text-3xl md:text-4xl font-serif mb-6">What Our Guests Say</h2>
         <p class="text-trulli-500">
-          Words from those who have experienced the magic of Yours Trulli
+          Words from those who have experienced the magic of Nest Guesthouse
         </p>
       </div>
 
@@ -202,7 +199,7 @@
           <div class="flex items-center">
             <div class="mr-4">
               <p class="font-medium">Emily & James</p>
-              <p class="text-sm text-trulli-500">London, UK</p>
+              <p class="text-sm text-trulli-500">Utrecht, Netherlands</p>
             </div>
           </div>
         </div>
@@ -234,7 +231,7 @@
           <div class="flex items-center">
             <div class="mr-4">
               <p class="font-medium">Sophie & Thomas</p>
-              <p class="text-sm text-trulli-500">Montreal, Canada</p>
+              <p class="text-sm text-trulli-500">Napoli, Italy</p>
             </div>
           </div>
         </div>
@@ -298,7 +295,7 @@
       </div>
       
       <div class="border-t border-white/20 mt-10 pt-6 flex flex-col md:flex-row justify-between items-center">
-        <p class="text-white/70 text-sm">&copy; 2025 Villa Magellano. All rights reserved.</p>
+        <p class="text-white/70 text-sm">&copy; 2025 Nest Guesthouse. All rights reserved.</p>
       </div>
     </div>
   </footer>
