--- a/about.html
+++ b/about.html
@@ -79,10 +79,11 @@
           Our Story
         </span>
         <h1 class="text-4xl md:text-5xl font-serif mb-6 leading-tight">
-          About Nest Guesthouse Magellano 
+          About Nest Guesthouse  
         </h1>
         <p class="text-lg text-trulli-500 leading-relaxed">
-       Discover the history and passion behind our villa. From traditional house to modern comfort, learn how we have built a unique home retreat.    </p>
+       Discover the history and passion behind our villa. From traditional house to modern comfort, learn how we have built a unique home retreat   
+        </p>
       </div>
     </div>
   </div>
