--- a/about.html
+++ b/about.html
@@ -129,9 +129,9 @@
           <div class="w-12 h-12 flex items-center justify-center bg-trulli-200 rounded-full mb-6">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-trulli-900"><path d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z"/><path d="M5 3v4"/><path d="M19 17v4"/><path d="M3 5h4"/><path d="M17 19h4"/></svg>
           </div>
-          <h3 class="text-xl font-medium mb-4">Authentic Experience</h3>
+          <h3 class="text-xl font-medium mb-4">Authenticity</h3>
           <p class="text-trulli-500">
-            We are committed to providing an immersive experience that reflects the true essence of Pugliese culture, history, and lifestyle, from architecture to cuisine.
+            At Nest Guesthouse, we believe in staying true to our roots. Every detail—from the design of the house to the plants in the garden—reflects the local culture and history. We want guests to experience the real charm of the Italian countryside.
           </p>
         </div>
 
@@ -140,9 +140,9 @@
           <div class="w-12 h-12 flex items-center justify-center bg-trulli-200 rounded-full mb-6">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-trulli-900"><path d="M3 6c0-1.1.9-2 2-2h14a2 2 0 0 1 2 2v0a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v0Z"/><path d="M3 13c0-1.1.9-2 2-2h14a2 2 0 0 1 2 2v0a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v0Z"/><path d="M10 18a2 2 0 0 1 4 0"/><path d="M15 20a2 2 0 1 0 4 0 2 2 0 1 0-4 0"/><path d="M7 20a2 2 0 1 0-2 2"/></svg>
           </div>
-          <h3 class="text-xl font-medium mb-4">Sustainable Hospitality</h3>
+          <h3 class="text-xl font-medium mb-4">Comfort</h3>
           <p class="text-trulli-500">
-            We honor our environment through sustainable practices, supporting local producers, reducing waste, and minimizing our ecological footprint while maximizing guest comfort.
+            Your comfort is our priority. We’ve carefully designed every space to feel warm, cozy, and relaxing. Whether you’re here for a short visit or a long stay, we want you to feel at home from the moment you arrive 
           </p>
         </div>
 
@@ -151,10 +151,9 @@
           <div class="w-12 h-12 flex items-center justify-center bg-trulli-200 rounded-full mb-6">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-trulli-900"><circle cx="12" cy="12" r="10"/><line x1="2" x2="22" y1="12" y2="12"/><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/></svg>
           </div>
-          <h3 class="text-xl font-medium mb-4">Community Connection</h3>
+          <h3 class="text-xl font-medium mb-4">Connection</h3>
           <p class="text-trulli-500">
-            We are deeply rooted in the local community, partnering with artisans, farmers, and local businesses to offer our guests authentic experiences while supporting the regional economy.
-          </p>
+          We value genuine connections—with nature, with the community, and with our guests. Nest Guesthouse is more than a place to sleep; it’s a space to slow down, share stories, and create lasting memories        </p>
         </div>
       </div>
     </div>
@@ -168,7 +167,7 @@
       <div class="max-w-4xl mx-auto text-center mb-16">
         <h2 class="text-3xl md:text-4xl font-serif mb-6">What Our Guests Say</h2>
         <p class="text-trulli-500">
-          Words from those who have experienced the magic of Nest Guesthouse
+          Words from those who have stayed with us 
         </p>
       </div>
 
@@ -195,8 +194,7 @@
             </div>
           </div>
           <blockquote class="text-trulli-500 italic mb-6">
-            "Our stay at Yours Trulli was nothing short of magical. The attention to detail in preserving the authentic character of the trulli while providing modern comforts made for a unique experience. Maria and Antonio were exceptional hosts, sharing their deep knowledge of the region and arranging unforgettable local experiences for us."
-          </blockquote>
+            "Our stay at Nest Guesthouse was unfortgettable. The blend of authentic charm and modern comfort made it truly special. Simonetta and Gianpietro were amazing hosts, offering local insights and unforgettable experiences."</blockquote>
           <div class="flex items-center">
             <div class="mr-4">
               <p class="font-medium">Emily & James</p>
@@ -227,11 +225,11 @@
             </div>
           </div>
           <blockquote class="text-trulli-500 italic mb-6">
-            "We chose Yours Trulli to celebrate our anniversary, and it exceeded all expectations. The trullo was beautifully restored, blending historical architecture with luxurious amenities. The cooking class arranged by Lucia introduced us to traditional Pugliese cuisine, and the private dinner under the stars among the olive trees was simply unforgettable."
+            "We chose Nest Guesthouse to celebrate our anniversary, and it exceeded all expectations. The villa was beautifully decorated, and the garden area was magical for having dinner."
           </blockquote>
           <div class="flex items-center">
             <div class="mr-4">
-              <p class="font-medium">Sophie & Thomas</p>
+              <p class="font-medium">Sofia & Michele</p>
               <p class="text-sm text-trulli-500">Napoli, Italy</p>
             </div>
           </div>
