--- a/area.html
+++ b/area.html
@@ -98,7 +98,7 @@
     <div class="container mx-auto px-6">
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
         <div>
-          <h2 class="text-3xl md:text-4xl font-serif mb-6">The South of Garda Lake</h2>
+          <h2 class="text-3xl md:text-4xl font-serif mb-6">The South of Lake Garda</h2>
           <p class="text-trulli-500 mb-6 leading-relaxed">
             Nest Guesthouse is located in Castelnuovo del Garda, one of Puglia's most picturesque areas, characterized by rolling hills, ancient olive trees, and the iconic trulli houses. This central location makes it the perfect base to explore the region's many treasures.
           </p>
@@ -111,7 +111,7 @@
         </div>
         <div class="overflow-hidden rounded-lg">
           <img 
-            src="https://images.unsplash.com/photo-1523531294919-4bcd7c65e216?q=80&w=2970&auto=format&fit=crop" 
+            src="static/castelnuovo-del-garda-1.jpg" 
             alt="Panoramic view of Valle d'Itria" 
             class="w-full h-auto hover:scale-105 transition-transform duration-1000"
           />
@@ -126,62 +126,62 @@
       <div class="max-w-4xl mx-auto text-center mb-12">
         <h2 class="text-3xl md:text-4xl font-serif mb-6">Strategically Located</h2>
         <p class="text-trulli-500">
-         Villa Magellano is ideally situated to explore the best of Garda lake and Verona. Here's how far you are from major attractions:
+         Nest Guesthouse is ideally situated to explore the best of Lake Garda and Verona. Here's how far you are from major attractions:
         </p>
       </div>
       
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
         <div class="bg-white p-8 rounded-lg shadow-sm">
-          <h3 class="text-xl font-medium mb-6">Distances From Yours Trulli</h3>
+          <h3 class="text-xl font-medium mb-6">Distances From Nest Guesthouse</h3>
           <ul class="space-y-4">
             <li class="flex justify-between items-center pb-4 border-b border-trulli-200">
               <div class="flex items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-trulli-900 mr-3"><path d="M3 21 7 3h10l4 18"/><path d="m7 9 10 .01"/><path d="M7 3v4"/><path d="M7 14v4"/><path d="M17 3v4"/><path d="M17 14v4"/></svg>
-                <span>Alberobello (UNESCO Trulli)</span>
+                <span>Gardaland</span>
               </div>
-              <span class="font-medium">7 km</span>
+              <span class="font-medium">4 km</span>
             </li>
             <li class="flex justify-between items-center pb-4 border-b border-trulli-200">
               <div class="flex items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-trulli-900 mr-3"><path d="M8 3c.132 0 .26.02.382.061A1.59 1.59 0 0 1 10 1c1.5 0 3 1.5 3 3 0-1.5 1.5-3 3-3 1.59 0 3 1.5 3 3v4c0 3.976-2.592 8.462-6 12-3.408-3.538-6-8.024-6-12V4a2.96 2.96 0 0 1 1-1Z"/></svg>
-                <span>Ostuni (White City)</span>
+                <span>Verona</span>
+              </div>
+              <span class="font-medium">20 km</span>
+            </li>
+            <li class="flex justify-between items-center pb-4 border-b border-trulli-200">
+              <div class="flex items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-trulli-900 mr-3"><path d="m3 21 1.9-5.7a8.5 8.5 0 1 1 3.8 3.8z"/></svg>
+                <span>Sirmione</span>
               </div>
               <span class="font-medium">15 km</span>
             </li>
             <li class="flex justify-between items-center pb-4 border-b border-trulli-200">
               <div class="flex items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-trulli-900 mr-3"><path d="m3 21 1.9-5.7a8.5 8.5 0 1 1 3.8 3.8z"/></svg>
-                <span>Torre Canne Beach</span>
-              </div>
-              <span class="font-medium">18 km</span>
-            </li>
-            <li class="flex justify-between items-center pb-4 border-b border-trulli-200">
-              <div class="flex items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-trulli-900 mr-3"><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"/><circle cx="12" cy="10" r="3"/></svg>
-                <span>Locorotondo</span>
+                <span>Peschiera del Garda</span>
               </div>
-              <span class="font-medium">8 km</span>
+              <span class="font-medium">6 km</span>
             </li>
             <li class="flex justify-between items-center pb-4 border-b border-trulli-200">
               <div class="flex items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-trulli-900 mr-3"><path d="M17.8 19.2 16 11l3.5-3.5C21 6 21.5 4 21 3c-1-.5-3 0-4.5 1.5L13 8 4.8 6.2c-.5-.1-.9.1-1.1.5l-.3.5c-.2.5-.1 1 .3 1.3L9 12l-2 3H4l-1 1 3 2 2 3 1-1v-3l3-2 3.5 5.3c.3.4.8.5 1.3.3l.5-.2c.4-.3.6-.7.5-1.2z"/></svg>
-                <span>Polignano a Mare</span>
+                <span>Verona Airport</span>
               </div>
-              <span class="font-medium">35 km</span>
+              <span class="font-medium">17 km</span>
             </li>
             <li class="flex justify-between items-center pb-4 border-b border-trulli-200">
               <div class="flex items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-trulli-900 mr-3"><path d="M20 7h-7L10 3H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2Z"/></svg>
-                <span>Lecce (Baroque City)</span>
+                <span>Venice</span>
               </div>
-              <span class="font-medium">85 km</span>
+              <span class="font-medium">136 km</span>
             </li>
             <li class="flex justify-between items-center">
               <div class="flex items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-trulli-900 mr-3"><path d="M6 12H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"/><path d="M6 8h12"/><path d="M18.3 17.7a2.5 2.5 0 0 1-3.16 3.83 2.53 2.53 0 0 1-1.14-2V12"/><path d="M10 17.7a2.5 2.5 0 0 0 3.16 3.83c.62-.35 1.05-1 1.14-1.7V12"/><path d="M12 12a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/></svg>
-                <span>Bari Airport</span>
+                <span>Milan</span>
               </div>
-              <span class="font-medium">70 km</span>
+              <span class="font-medium">148 km</span>
             </li>
           </ul>
         </div>
@@ -197,9 +197,9 @@
   <section class="py-20 bg-white">
     <div class="container mx-auto px-6">
       <div class="max-w-4xl mx-auto text-center mb-16">
-        <h2 class="text-3xl md:text-4xl font-serif mb-6">Charming Towns to Explore</h2>
+        <h2 class="text-3xl md:text-4xl font-serif mb-6">Must-visit places </h2>
         <p class="text-trulli-500">
-          Puglia is home to some of Italy's most picturesque towns, each with its own unique character and charm
+          Lake Garda is home to some of Italy's most picturesque towns, each with its own unique character and charm
         </p>
       </div>
       
@@ -214,13 +214,13 @@
             />
           </div>
           <div class="p-6">
-            <h3 class="text-xl font-serif mb-2">Alberobello</h3>
+            <h3 class="text-xl font-serif mb-2">Gardaland</h3>
             <p class="text-trulli-500 mb-4">
-              A UNESCO World Heritage site, Alberobello is famous for its unique trulli houses with conical roofs. Explore the enchanting quarters of Rione Monti and Aia Piccola.
+               Italy’s most famous amusement park, featuring thrilling rides, family attractions, and live shows.
             </p>
             <div class="flex items-center text-sm text-trulli-900">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M18 8c0 4.5-6 9-6 9s-6-4.5-6-9a6 6 0 0 1 12 0z"/><circle cx="12" cy="8" r="2"/></svg>
-              <span>7 km from Yours Trulli</span>
+              <span>4 km from Nest Guesthouse</span>
             </div>
           </div>
         </div>
@@ -235,13 +235,13 @@
             />
           </div>
           <div class="p-6">
-            <h3 class="text-xl font-serif mb-2">Ostuni</h3>
+            <h3 class="text-xl font-serif mb-2">CanevaWorld Resort</h3>
             <p class="text-trulli-500 mb-4">
-              Known as the "White City" for its dazzling whitewashed buildings that cascade down a hillside. Wander through the labyrinthine streets and enjoy panoramic views of the Adriatic Sea.
+              A unique theme park combining Caneva Aquapark and Movieland, perfect for a day of water fun and Hollywood-inspired experiences.
             </p>
             <div class="flex items-center text-sm text-trulli-900">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M18 8c0 4.5-6 9-6 9s-6-4.5-6-9a6 6 0 0 1 12 0z"/><circle cx="12" cy="8" r="2"/></svg>
-              <span>15 km from Yours Trulli</span>
+              <span>5 km from Nest Guesthouse</span>
             </div>
           </div>
         </div>
@@ -256,13 +256,13 @@
             />
           </div>
           <div class="p-6">
-            <h3 class="text-xl font-serif mb-2">Locorotondo</h3>
+            <h3 class="text-xl font-serif mb-2">Parco Natura Viva</h3>
             <p class="text-trulli-500 mb-4">
-              One of Italy's most beautiful villages, Locorotondo is a circular town with immaculate whitewashed houses, decorated balconies, and flower-filled streets.
+              A large zoo and safari park offering an up-close look at exotic animals and supporting conservation projects.
             </p>
             <div class="flex items-center text-sm text-trulli-900">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M18 8c0 4.5-6 9-6 9s-6-4.5-6-9a6 6 0 0 1 12 0z"/><circle cx="12" cy="8" r="2"/></svg>
-              <span>8 km from Yours Trulli</span>
+              <span>8 km from Nest Guesthouse</span>
             </div>
           </div>
         </div>
@@ -277,13 +277,13 @@
             />
           </div>
           <div class="p-6">
-            <h3 class="text-xl font-serif mb-2">Polignano a Mare</h3>
+            <h3 class="text-xl font-serif mb-2">Peschiera del Garda</h3>
             <p class="text-trulli-500 mb-4">
-              Perched on dramatic limestone cliffs above the Adriatic Sea, this coastal gem features a charming old town and the famous Lama Monachile beach nestled in a rocky cove.
+              A charming lakeside town with a UNESCO-listed fortress and beautiful waterfront promenades.
             </p>
             <div class="flex items-center text-sm text-trulli-900">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M18 8c0 4.5-6 9-6 9s-6-4.5-6-9a6 6 0 0 1 12 0z"/><circle cx="12" cy="8" r="2"/></svg>
-              <span>35 km from Yours Trulli</span>
+              <span>7 km from Nest Guesthouse</span>
             </div>
           </div>
         </div>
@@ -298,13 +298,13 @@
             />
           </div>
           <div class="p-6">
-            <h3 class="text-xl font-serif mb-2">Martina Franca</h3>
+            <h3 class="text-xl font-serif mb-2">Borghetto sul Mincio</h3>
             <p class="text-trulli-500 mb-4">
-              A baroque gem with elegant piazzas, intricate facades, and a lively atmosphere. Known for its prestigious summer opera festival and excellent local salumi.
+              A picturesque medieval village with watermills, stunning views, and romantic vibes.
             </p>
             <div class="flex items-center text-sm text-trulli-900">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M18 8c0 4.5-6 9-6 9s-6-4.5-6-9a6 6 0 0 1 12 0z"/><circle cx="12" cy="8" r="2"/></svg>
-              <span>12 km from Yours Trulli</span>
+              <span>13 km from Nest Guesthouse</span>
             </div>
           </div>
         </div>
@@ -319,13 +319,13 @@
             />
           </div>
           <div class="p-6">
-            <h3 class="text-xl font-serif mb-2">Lecce</h3>
+            <h3 class="text-xl font-serif mb-2">Sirmione</h3>
             <p class="text-trulli-500 mb-4">
-              Often called the "Florence of the South," Lecce is renowned for its ornate baroque architecture, rich history, and vibrant cultural scene. Don't miss the stunning Basilica di Santa Croce.
+              Famous for its Scaliger Castle, Roman ruins at the Grotte di Catullo, and thermal spas.
             </p>
             <div class="flex items-center text-sm text-trulli-900">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M18 8c0 4.5-6 9-6 9s-6-4.5-6-9a6 6 0 0 1 12 0z"/><circle cx="12" cy="8" r="2"/></svg>
-              <span>85 km from Yours Trulli</span>
+              <span>20 km from Nest Guesthouse</span>
             </div>
           </div>
         </div>
