--- a/area.html
+++ b/area.html
@@ -88,7 +88,7 @@
           Explore the beauty of Lake Garda
         </h1>
         <p class="text-lg text-trulli-500 leading-relaxed">
-         Discover the beauty of Lake Garda—charming towns, crystal-clear waters, and breathtaking scenery. Sip local wine, unwind in thermal spas, or dive into adventures like windsurfing and hiking. Lake Garda is the perfect escape for unforgettable moments!       </p>
+          Discover the beauty of Lake Garda—charming towns, crystal-clear waters, and breathtaking scenery. Sip local wine, unwind in thermal spas, or dive into adventures like windsurfing and hiking. Lake Garda is the perfect escape for unforgettable moments!       </p>
       </div>
     </div>
   </div>
@@ -187,8 +187,8 @@
         </div>
         <div class="h-96 rounded-lg overflow-hidden">
       <!-- Embedded Google Map -->
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10138.51154685352!2d10.722376594679512!3d45.442942299314474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4781e940679e984d%3A0xc6174d9927b8e4be!2sVilla%20Magellano!5e0!3m2!1sit!2snl!4v1742730310609!5m2!1sit!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d37591.90150047018!2d10.702892013063849!3d45.452647660400004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4781e940679e984d%3A0xc6174d9927b8e4be!2sNest%20Guesthouse!5e0!3m2!1sit!2sit!4v1744557378917!5m2!1sit!2sit" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+       </div>
       </div>
     </div>
   </section>
