--- a/area.html
+++ b/area.html
@@ -208,7 +208,7 @@
         <div class="bg-trulli-100 rounded-lg overflow-hidden shadow-sm hover-lift">
           <div class="aspect-[4/3] overflow-hidden">
             <img 
-              src="https://images.unsplash.com/photo-1565091058943-e9f38dbf3734?q=80&w=2865&auto=format&fit=crop" 
+              src="static/gardaland.png" 
               alt="Alberobello" 
               class="w-full h-full object-cover"
             />
@@ -229,7 +229,7 @@
         <div class="bg-trulli-100 rounded-lg overflow-hidden shadow-sm hover-lift">
           <div class="aspect-[4/3] overflow-hidden">
             <img 
-              src="https://images.unsplash.com/photo-1600001435638-f11ec5592c5d?q=80&w=2938&auto=format&fit=crop" 
+              src="static/caneva.jpeg" 
               alt="Ostuni" 
               class="w-full h-full object-cover"
             />
@@ -250,7 +250,7 @@
         <div class="bg-trulli-100 rounded-lg overflow-hidden shadow-sm hover-lift">
           <div class="aspect-[4/3] overflow-hidden">
             <img 
-              src="https://images.unsplash.com/photo-1558366358-bcd430a17061?q=80&w=2874&auto=format&fit=crop" 
+              src="static/safari.jpg" 
               alt="Locorotondo" 
               class="w-full h-full object-cover"
             />
@@ -271,7 +271,7 @@
         <div class="bg-trulli-100 rounded-lg overflow-hidden shadow-sm hover-lift">
           <div class="aspect-[4/3] overflow-hidden">
             <img 
-              src="https://images.unsplash.com/photo-1619430041587-4437255c2dbb?q=80&w=2940&auto=format&fit=crop" 
+              src="static/peschiera.jpeg" 
               alt="Polignano a Mare" 
               class="w-full h-full object-cover"
             />
@@ -292,7 +292,7 @@
         <div class="bg-trulli-100 rounded-lg overflow-hidden shadow-sm hover-lift">
           <div class="aspect-[4/3] overflow-hidden">
             <img 
-              src="https://images.unsplash.com/photo-1608027607656-f309e6fdf028?q=80&w=2830&auto=format&fit=crop" 
+              src="static/borghetto.jpg" 
               alt="Martina Franca" 
               class="w-full h-full object-cover"
             />
@@ -313,7 +313,7 @@
         <div class="bg-trulli-100 rounded-lg overflow-hidden shadow-sm hover-lift">
           <div class="aspect-[4/3] overflow-hidden">
             <img 
-              src="https://images.unsplash.com/photo-1601676424348-39aa9de31671?q=80&w=2940&auto=format&fit=crop" 
+              src="static/rocca-scaligera-sirmione.jpg" 
               alt="Lecce" 
               class="w-full h-full object-cover"
             />
