--- a/area.html
+++ b/area.html
@@ -347,7 +347,7 @@
         <!-- Beach Map/Image -->
         <div class="relative overflow-hidden rounded-lg aspect-square md:aspect-auto">
           <img 
-            src="https://images.unsplash.com/photo-1597500308297-25c06f0145d4?q=80&w=2940&auto=format&fit=crop" 
+            src="static/baia.jpg" 
             alt="Puglia coastline aerial view" 
             class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
           />
