--- a/area.html
+++ b/area.html
@@ -410,7 +410,7 @@
         <div class="bg-trulli-100 rounded-lg overflow-hidden shadow-sm hover-lift">
           <div class="aspect-[4/3] overflow-hidden">
             <img 
-              src="https://images.unsplash.com/photo-1518133683791-0b9de5a055f0?q=80&w=2787&auto=format&fit=crop" 
+              src="static/bigoli.png" 
               alt="Orecchiette pasta" 
               class="w-full h-full object-cover"
             />
@@ -418,7 +418,7 @@
           <div class="p-6">
             <h3 class="text-xl font-serif mb-2">Bigoli</h3>
             <p class="text-trulli-500">
-              The region's iconic ear-shaped pasta, traditionally served with cime di rapa (turnip tops) or a rich tomato sauce. In Bari's old town, you can watch local women making fresh orecchiette by hand.
+              An absolute classic made with fresh egg pasta!
             </p>
           </div>
         </div>
@@ -427,7 +427,7 @@
         <div class="bg-trulli-100 rounded-lg overflow-hidden shadow-sm hover-lift">
           <div class="aspect-[4/3] overflow-hidden">
             <img 
-              src="https://images.unsplash.com/photo-1555072956-7758afb20e8f?q=80&w=2787&auto=format&fit=crop" 
+              src="static/tortellini.jpg" 
               alt="Burrata cheese" 
               class="w-full h-full object-cover"
             />
@@ -435,7 +435,7 @@
           <div class="p-6">
             <h3 class="text-xl font-serif mb-2">Tortellini of Valeggio sul Mincio</h3>
             <p class="text-trulli-500">
-              A specialty of Andria, burrata is a rich, creamy cheese made from mozzarella and cream. The outer shell is solid mozzarella, while the inside contains soft, stringy curd and fresh cream.
+              Really tasty, special thin pastry and many different fillings 
             </p>
           </div>
         </div>
@@ -444,15 +444,15 @@
         <div class="bg-trulli-100 rounded-lg overflow-hidden shadow-sm hover-lift">
           <div class="aspect-[4/3] overflow-hidden">
             <img 
-              src="https://images.unsplash.com/photo-1590321361628-5f9a4fb814ef?q=80&w=2874&auto=format&fit=crop" 
+              src="static/pesce.jpg" 
               alt="Olive oil" 
               class="w-full h-full object-cover"
             />
           </div>
           <div class="p-6">
-            <h3 class="text-xl font-serif mb-2">lake se</h3>
+            <h3 class="text-xl font-serif mb-2">Fish of Lake Garda</h3>
             <p class="text-trulli-500">
-              Puglia produces about 40% of Italy's olive oil, with some trees dating back over 1,000 years. The region's olive oil is prized for its fruity flavor and peppery finish.
+              Among the fish most used in recipes are whitefish , lake trout , sardines and carpione
             </p>
           </div>
         </div>
@@ -483,7 +483,7 @@
           <div>
             <h3 class="text-xl font-serif mb-3">Olive Oil Tasting</h3>
             <p class="text-trulli-500">
-              Visit an ancient masseria (fortified farmhouse) with centuries-old olive trees to learn about the production process and taste different varieties of the region's "green gold."
+              The Lake Garda region is also known for its high-quality extra virgin olive oil
             </p>
           </div>
         </div>
@@ -494,9 +494,9 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-trulli-900"><path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"/><polyline points="14 2 14 8 20 8"/><path d="M9 15v-3.5a2.5 2.5 0 0 1 5 0V15"/><path d="M9 13.5h5"/></svg>
           </div>
           <div>
-            <h3 class="text-xl font-serif mb-3">Valpolicella Wine Tasting</h3>
+            <h3 class="text-xl font-serif mb-3">Wine Tasting</h3>
             <p class="text-trulli-500">
-              Learn to prepare traditional Pugliese dishes with local chefs. From handmade pasta to classic tiella, unlock the secrets of the region's beloved cuisine.
+              Valpolicella is renowned for its robust red wines. The region's flagship wines include Valpolicella, Ripasso, Amarone della Valpolicella, and Recioto della Valpolicella
             </p>
           </div>
         </div>
