--- a/rooms.html
+++ b/rooms.html
@@ -342,7 +342,7 @@
           
           <!-- FAQ Item 5 -->
           <div>
-            <h3 class="text-xl font-medium mb-3">How do I get to Villa Magellano?</h3>
+            <h3 class="text-xl font-medium mb-3">How do I get to Nest Guesthouse?</h3>
             <p class="text-trulli-500">
               The nearest highway exits are Peschiera del Garda (A4) and Verona Sud (A12).
               The nearest airports are Verona (12 km) and Bergamo (30 km). We can arrange airport transfers for an additional fee, or you can rent a car. Detailed directions will be provided upon booking confirmation.
@@ -364,7 +364,7 @@
           Reserve Your Villa Experience
         </h2>
         <p class="text-white/80 mb-10">
-          Book directly with us for the best rates and personalized service. We look forward to welcoming you at Villa Magellano.
+          Book directly with us for the best rates and personalized service. We look forward to welcoming you at Nest Guesthouse 
         </p>
         <a 
           href="booking.html" 
