--- a/about.html
+++ b/about.html
@@ -266,8 +266,8 @@
     <div class="container mx-auto px-6 py-12">
       <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
         <div>
-          <h3 class="text-2xl font-serif mb-4">Yours Villa</h3>
-          <p class="text-white/70 mb-6">Experience the magic of authentic Garda Lake in our meticulously restored trulli houses.</p>
+          <h3 class="text-2xl font-serif mb-4">Nest Guesthouse</h3>
+          <p class="text-white/70 mb-6">Experience the magic of authentic Garda Lake in our meticulously renovated villa</p>
         </div>
         
         <div>
