--- a/booking.html
+++ b/booking.html
@@ -424,8 +424,8 @@
     <div class="container mx-auto px-6 py-12">
       <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
         <div>
-          <h3 class="text-2xl font-serif mb-4">Yours Trulli</h3>
-          <p class="text-white/70 mb-6">Experience the magic of the authentic Garda Lake in our meticulously renovated Villa.</p>
+          <h3 class="text-2xl font-serif mb-4">Nest Guesthouse</h3>
+          <p class="text-white/70 mb-6">Experience the magic of the authentic Garda Lake in our meticulously renovated Villa</p>
         </div>
         
         <div>
@@ -452,7 +452,7 @@
       </div>
       
       <div class="border-t border-white/20 mt-10 pt-6 flex flex-col md:flex-row justify-between items-center">
-        <p class="text-white/70 text-sm">&copy; 2025 Villa Magellano. All rights reserved.</p>
+        <p class="text-white/70 text-sm">&copy; 2025 Nest Guesthouse. All rights reserved.</p>
       </div>
     </div>
   </footer>
