--- a/rooms.html
+++ b/rooms.html
@@ -91,6 +91,7 @@
   <!-- Room Listings -->
   <section class="py-20 bg-white">
     <div class="container mx-auto px-6">
+      
       <!-- Room 1 -->
       <div class="mb-24">
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
@@ -98,7 +99,7 @@
           <div class="relative">
             <div class="aspect-[4/3] overflow-hidden rounded-lg">
               <img 
-                src="static/airbnb4.jpg" 
+                src="static/IMG_3778_copy.jpeg" 
                 alt="Trullo Giardino exterior" 
                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
               />
@@ -106,21 +107,21 @@
             <div class="grid grid-cols-3 gap-3 mt-3">
               <div class="aspect-[4/3] overflow-hidden rounded-lg">
                 <img 
-                  src="static/airbnb7.jpg" 
+                  src="static/IMG_3785.jpeg" 
                   alt="Trullo Giardino pool" 
                   class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
                 />
               </div>
               <div class="aspect-[4/3] overflow-hidden rounded-lg">
                 <img 
-                  src="static/airbnb10.jpg" 
+                  src="static/IMG_3775.jpeg" 
                   alt="Trullo Giardino bedroom" 
                   class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
                 />
               </div>
               <div class="aspect-[4/3] overflow-hidden rounded-lg">
                 <img 
-                  src="static/airbnb9.jpg" 
+                  src="static/IMG_3790.jpeg" 
                   alt="Trullo Giardino bathroom" 
                   class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
                 />
@@ -136,7 +137,7 @@
                 <span class="text-2xl font-serif text-trulli-500">€200 / night</span>
               </div>
               <p class="text-trulli-500 mb-6 leading-relaxed">
-                Our largest and most comfortable accommodation, Family Suite features a cluster of connected trulli with a private garden and kitchen. Perfect for families or small groups seeking a comfortable experience.
+                Our largest and most comfortable accommodation, Family Suite features a cluster of connected trulli with a private kitchen and a spacious garden area. Perfect for families or small groups seeking a comfortable experience.
               </p>
               
               <!-- Amenities -->
