--- a/rooms.html
+++ b/rooms.html
@@ -107,21 +107,21 @@
             <div class="grid grid-cols-3 gap-3 mt-3">
               <div class="aspect-[4/3] overflow-hidden rounded-lg">
                 <img 
-                  src="static/IMG_3785.jpeg" 
+                  src="static/IMG_3785.jpg" 
                   alt="Trullo Giardino pool" 
                   class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
                 />
               </div>
               <div class="aspect-[4/3] overflow-hidden rounded-lg">
                 <img 
-                  src="static/IMG_3775.jpeg" 
+                  src="static/IMG_3775.jpg" 
                   alt="Trullo Giardino bedroom" 
                   class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
                 />
               </div>
               <div class="aspect-[4/3] overflow-hidden rounded-lg">
                 <img 
-                  src="static/IMG_3790.jpeg" 
+                  src="static/IMG_3790.jpg" 
                   alt="Trullo Giardino bathroom" 
                   class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
                 />
