--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <!-- Hero -->
   <header class="relative h-[70vh] md:h-screen">
     <div class="absolute inset-0">
-      <img src="static/view_pano.jpg" alt="Lake view" class="w-full h-full object-cover" />
+      <img src="static/11.jpg" alt="Lake view" class="w-full h-full object-cover" />
       <div class="absolute inset-0 bg-black bg-opacity-40"></div>
     </div>
     <div class="relative h-full flex items-center">
