--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Nest Guesthouse - Garda Lake - Verona</title>
   <meta name="description" content="Experience the authentic Garda Lake in our luxurious villa" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">
-  <link rel="icon" href="static/logo.jpeg" type = "image/jpeg">
+  <link rel="icon" href="static/ita_logo.png" type = "image/png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -164,7 +164,7 @@
       </div>
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
         <div class="overflow-hidden"><img src="static/IMG_3775.jpg" alt="Interior" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
-        <div class="overflow-hidden"><img src="IMG_3778_copy.jpeg" alt="Exterior" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
+        <div class="overflow-hidden"><img src="static/IMG_3778_copy.jpeg" alt="Exterior" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
         <div class="overflow-hidden"><img src="static/IMG_3783.jpg" alt="Pool" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
         <div class="overflow-hidden"><img src="static/IMG_3785.jpg" alt="Dining" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
         <div class="overflow-hidden"><img src="static/IMG_3790.jpg" alt="Bedroom" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
