--- a/booking.html
+++ b/booking.html
@@ -116,7 +116,7 @@
           <div class="bg-trulli-100 p-8 rounded-lg">
             <h2 class="text-2xl font-serif mb-6">Check Availability</h2>
             
-            <form id="booking-form" class="space-y-6">
+            <form action="https://formspree.io/f/mpwpbnna" method="POST">
               <!-- Dates -->
               <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div>
@@ -265,6 +265,7 @@
                   You will receive a confirmation email once availability is confirmed. No payment is required at this stage.
                 </p>
               </div>
+              
             </form>
           </div>
         </div>
