--- a/index_it.html
+++ b/index_it.html
@@ -5,14 +5,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nest Guesthouse - Lago di Garda</title>
   <meta name="description" content="Vivi l'autentico Lago di Garda nella nostra villa di lusso" />
-  <!-- Rest of head remains the same -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">
+  <link rel="icon" href="static/nest_logo copy.jpeg" type = "image/jpeg">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: ['Inter', 'sans-serif'],
+            serif: ['Playfair Display', 'serif'],
+          },
+          colors: {
+            trulli: {
+              100: 'hsl(36, 33%, 98%)',
+              200: 'hsl(36, 8%, 88%)',
+              500: 'hsl(33, 3%, 40%)',
+              900: 'hsl(33, 3%, 19%)',
+            }
+          },
+        }
+      }
+    }
+  </script>
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+    body {
+      font-family: 'Inter', sans-serif;
+      color: hsl(33, 3%, 19%);
+      background-color: hsl(36, 33%, 98%);
+    }
+    h1, h2, h3, h4, h5, h6 {
+      font-family: 'Playfair Display', serif;
+      font-weight: 500;
+      letter-spacing: -0.025em;
+    }
+    .hover-lift {
+      transition: transform 0.35s ease-out;
+    }
+    .hover-lift:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
+    }
+  </style>
 </head>
 <body>
   <!-- Navbar -->
   <nav class="bg-white py-4 sticky top-0 z-50 shadow-sm">
     <div class="container mx-auto px-4 flex justify-between items-center">
       <a href="#" class="text-xl md:text-2xl font-serif">Nest Guesthouse</a>
-      <!-- Hamburger Button remains the same -->
+      <!-- Hamburger Button -->
+      <button id="menu-toggle" class="md:hidden focus:outline-none">
+        <svg class="w-6 h-6 text-trulli-900" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+        </svg>
+      </button>
       <!-- Navigation Links -->
       <div id="menu" class="hidden md:flex md:space-x-6 absolute md:static top-14 left-0 w-full md:w-auto bg-white md:bg-transparent px-4 md:px-0 py-4 md:py-0 flex-col md:flex-row items-center">
         <a href="about.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Chi siamo</a>
@@ -28,7 +77,10 @@
 
   <!-- Hero -->
   <header class="relative h-[70vh] md:h-screen">
-    <!-- Image remains the same -->
+    <div class="absolute inset-0">
+      <img src="static/11.jpg" alt="Vista lago" class="w-full h-full object-cover" />
+      <div class="absolute inset-0 bg-black bg-opacity-40"></div>
+    </div>
     <div class="relative h-full flex items-center">
       <div class="container mx-auto px-4 py-10 md:py-20 text-center md:text-left">
         <div class="max-w-3xl mx-auto md:mx-0">
@@ -71,7 +123,11 @@
       <div class="space-y-16 md:space-y-32">
         <!-- Feature 1 -->
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-16 items-center">
-          <!-- Image remains the same -->
+          <div class="h-full overflow-hidden">
+            <div class="aspect-[4/3] w-full overflow-hidden">
+              <img src="static/airbnb17.jpg" alt="Esperienza autentica" class="object-cover w-full h-full hover-lift transform transition-transform duration-[1.8s] hover:scale-105" />
+            </div>
+          </div>
           <div class="flex flex-col justify-center">
             <h2 class="text-2xl md:text-4xl font-serif mb-4">Villa Italiana Tradizionale</h2>
             <p class="text-trulli-500 text-base md:text-lg leading-relaxed">
@@ -87,7 +143,11 @@
               Circondato da un bellissimo giardino, goditi un rifugio sereno.
             </p>
           </div>
-          <!-- Image remains the same -->
+          <div class="h-full overflow-hidden">
+            <div class="aspect-[4/3] w-full overflow-hidden">
+              <img src="static/view_pano.jpg" alt="Natura" class="object-cover w-full h-full hover-lift transform transition-transform duration-[1.8s] hover:scale-105" />
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -102,13 +162,21 @@
           Scopri la bellezza e il comfort della nostra villa italiana.
         </p>
       </div>
-      <!-- Gallery images remain the same -->
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+        <div class="overflow-hidden"><img src="static/IMG_3775.jpg" alt="Interni" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
+        <div class="overflow-hidden"><img src="static/IMG_3778_copy.jpeg" alt="Esterni" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
+        <div class="overflow-hidden"><img src="static/IMG_3783.jpg" alt="Piscina" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
+        <div class="overflow-hidden"><img src="static/IMG_3785.jpg" alt="Sala da pranzo" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
+        <div class="overflow-hidden"><img src="static/IMG_3790.jpg" alt="Camera da letto" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
+        <div class="overflow-hidden"><img src="static/airbnb_dec23-16.jpg" alt="Giardino" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
+      </div>
     </div>
   </section>
 
   <!-- CTA -->
   <section id="book-now" class="py-16 md:py-28 relative">
-    <!-- Background remains the same -->
+    <div class="absolute inset-0 bg-[url('https://images.unsplash.com/photo-1606046604972-77cc76aee944?q=80&w=2832&auto=format&fit=crop')] bg-cover bg-center opacity-20"></div>
+    <div class="absolute inset-0 bg-trulli-900/70"></div>
     <div class="container mx-auto px-4 relative z-10">
       <div class="max-w-3xl mx-auto text-center text-white">
         <h2 class="text-2xl md:text-4xl font-serif mb-6">Inizia la tua esperienza sul Garda</h2>
@@ -126,7 +194,6 @@
           <h3 class="text-xl md:text-2xl font-serif mb-4">Nest Guesthouse</h3>
           <p class="text-white/70 text-sm md:text-base mb-6">Vivi la magia del Lago di Garda nella nostra lussuosa villa.</p>
         </div>
-        <!-- Contact and other sections remain the same, just translated text -->
         <div>
           <h4 class="text-base md:text-lg font-medium mb-4">Contatti</h4>
           <address class="text-white/70 text-sm md:text-base not-italic">
@@ -152,6 +219,12 @@
     </div>
   </footer>
 
-  <!-- JavaScript remains the same -->
+  <!-- JavaScript for Hamburger Menu -->
+  <script>
+    document.getElementById('menu-toggle').addEventListener('click', function() {
+      document.getElementById('menu').classList.toggle('hidden');
+    });
+  </script>
+  <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
 </body>
 </html>
