--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nest Guesthouse - Lake Garda</title>
   <meta name="description" content="Experience the authentic Garda Lake in our luxurious villa" />
+  <meta name="keywords" content="nestguesthouse, site">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">
   <link rel="icon" href="static/nest_logo copy.jpeg" type = "image/jpeg">
   <script src="https://cdn.tailwindcss.com"></script>
