--- a/about_it.html
+++ b/about_it.html
@@ -57,11 +57,12 @@
     <div class="container mx-auto px-6 flex justify-between items-center">
       <a href="index.html" class="text-2xl font-serif">Nest Guesthouse</a>
       <div class="hidden md:flex space-x-8">
-        <a href="index.html" class="text-trulli-900 hover:text-trulli-500">Home</a>
-        <a href="about.html" class="text-trulli-900 hover:text-trulli-500 font-medium">Chi siamo</a>
-        <a href="rooms.html" class="text-trulli-900 hover:text-trulli-500">Camere</a>
-        <a href="booking.html" class="text-trulli-900 hover:text-trulli-500">Prenota</a>
-        <a href="area.html" class="text-trulli-900 hover:text-trulli-500">Zona</a>
+        <a href="index_it.html" class="text-trulli-900 hover:text-trulli-500">Home</a>
+        <a href="about_it.html" class="text-trulli-900 hover:text-trulli-500 font-medium">Chi siamo</a>
+        <a href="rooms_it.html" class="text-trulli-900 hover:text-trulli-500">Camere</a>
+        <a href="booking_it.html" class="text-trulli-900 hover:text-trulli-500">Prenota</a>
+        <a href="area_it.html" class="text-trulli-900 hover:text-trulli-500">Zona</a>
+        <a href="index.html" id="lang-switch"><img src="static/eng_logo.png" alt="eng Flag" class="w-4 h-4"></a>
       </div>
       <button class="md:hidden">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
