--- a/area_it.html
+++ b/area_it.html
@@ -272,7 +272,7 @@
         <div class="bg-trulli-100 rounded-lg overflow-hidden shadow-sm hover-lift">
           <div class="aspect-[4/3] overflow-hidden">
             <img 
-              src="static/peschiera.jpeg" 
+              src="static/peschiera.png" 
               alt="Peschiera del Garda" 
               class="w-full h-full object-cover"
             />
