--- a/area.html
+++ b/area.html
@@ -68,6 +68,7 @@
         <a href="rooms.html" class="text-trulli-900 hover:text-trulli-500">Rooms</a>
         <a href="booking.html" class="text-trulli-900 hover:text-trulli-500">Book Now</a>
         <a href="area.html" class="text-trulli-900 hover:text-trulli-500 font-medium">Area</a>
+        <a href="area_it.html" id="lang-switch"><img src="static/ita_logo.png" alt="eng Flag" class="w-4 h-4"></a>
       </div>
       <button class="md:hidden">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -271,7 +272,7 @@
         <div class="bg-trulli-100 rounded-lg overflow-hidden shadow-sm hover-lift">
           <div class="aspect-[4/3] overflow-hidden">
             <img 
-              src="static/peschiera.jpeg" 
+              src="static/peschiera.png" 
               alt="Polignano a Mare" 
               class="w-full h-full object-cover"
             />
