--- a/booking_it.html
+++ b/booking_it.html
@@ -443,11 +443,11 @@
         <div>
           <h4 class="text-lg font-medium mb-4">Link</h4>
           <ul class="space-y-2 text-white/70">
-            <li><a href="index.html" class="hover:text-white transition-colors">Home</a></li>
-            <li><a href="about.html" class="hover:text-white transition-colors">Chi siamo</a></li>
-            <li><a href="rooms.html" class="hover:text-white transition-colors">Camere</a></li>
-            <li><a href="booking.html" class="hover:text-white transition-colors">Prenota</a></li>
-            <li><a href="area.html" class="hover:text-white transition-colors">Zona</a></li>
+            <li><a href="index_it.html" class="hover:text-white transition-colors">Home</a></li>
+            <li><a href="about_it.html" class="hover:text-white transition-colors">Chi siamo</a></li>
+            <li><a href="rooms_it.html" class="hover:text-white transition-colors">Camere</a></li>
+            <li><a href="booking_it.html" class="hover:text-white transition-colors">Prenota</a></li>
+            <li><a href="area_it.html" class="hover:text-white transition-colors">Zona</a></li>
           </ul>
         </div>
         
