--- a/booking.html
+++ b/booking.html
@@ -74,7 +74,7 @@
   <!-- Navbar -->
   <nav class="bg-white py-4 sticky top-0 z-50 shadow-sm">
     <div class="container mx-auto px-6 flex justify-between items-center">
-      <a href="index.html" class="text-2xl font-serif">Villa Magellano</a>
+      <a href="index.html" class="text-2xl font-serif">Nest Guesthouse</a>
       <div class="hidden md:flex space-x-8">
         <a href="index.html" class="text-trulli-900 hover:text-trulli-500">Home</a>
         <a href="about.html" class="text-trulli-900 hover:text-trulli-500">About us</a>
